additional responsive css page specifically for 980 768 640

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width-device-width, initial-scale=1">
   <title>About | Joseph Ledbetter</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+ 
 </head>
 
 <body>
-
+  
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Joseph</a>
@@ -22,10 +24,10 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section">
+    <section class="main-section-index">
       <h1>About Me</h1>
 
-      <img src="assets/images/picture.png" class="auth-image" alt="Your Name">
+      <img id="about-image" src="assets/images/picture.png" class="auth-image" alt="Your Name">
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
