--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width-device-width, initial-scale=1">
   <title>Contact | Joseph Ledbetter</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+  
 </head>
 
 <body>
