--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width-device-width, initial-scale=1">
   <title>Portfolio | Joseph Ledbetter</title>
-  <link rel="stylesheet" type="text/css" media="screen and (max-width: 980px)" href="assets/css/style.css">
-</head>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+  
 
 <body>
 
