restructure of all html pages for active responsiveness

--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,18 @@
-<!doctype html>
-<html lang="en-us">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width-device-width, initial-scale=1">
-  <title>Contact | Joseph Ledbetter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Portfolio | Joseph Ledbetter</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-  
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Joseph</a>
+      <a href="index.html" id="logo">Joe Ledbetter</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -24,8 +22,8 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section-contact">
-      <h1 id="h1-contact">Contact</h1>
+    <section class="main-section">
+      <h1>Contact</h1>
 
       <form id="contact-form">
         <ul>
