--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,18 @@
-<!doctype html>
-<html lang="en-us">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width-device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portfolio | Joseph Ledbetter</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-  
+</head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Joseph</a>
+      <a href="index.html" id="logo">Joe Ledbetter</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -23,18 +22,18 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section-portfolio">
-      <h1 id="h1-portfolio">Portfolio</h1>
+    <section class="main-section">
+      <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Flightz">
 
-        <h3>Word Guess</h3>
+        <h3>Flightz Travel</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="Daily Clock">
 
-        <h3>RPG Game</h3>
+        <h3>Daily Clock</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
@@ -44,7 +43,7 @@
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-        <h3> Info Widget</h3>
+        <h3>Rutgers Info Widget</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
