--- a/portfolio.html
+++ b/portfolio.html
@@ -26,17 +26,17 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Flightz">
+        <img src="assets/images/flightz.png" alt="Flightz">
 
         <h3>Flightz Travel</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="Daily Clock">
+        <img src="assets/images/dailyclock.png" alt="Daily Clock">
 
         <h3>Daily Clock</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/spooky.png" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
