updated links added as a-spans to the portfolio page and removed previous examples leaving only trivia, flightz, and daily clock

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,29 +28,19 @@
       <div class="work">
         <img src="assets/images/flightz.png" alt="Flightz">
 
-        <h3>Flightz Travel</h3>
+        <h3><a href="https://josephledbetter.github.io/Flightz/">Flightz Travel</a></h3>
       </div>
       <div class="work">
-        <img src="assets/images/dailyclock.png" alt="Daily Clock">
+        <img src="assets/images/dailyclock.png"alt="Daily Clock">
 
-        <h3>Daily Clock</h3>
+        <h3><a href="https://josephledbetter.github.io/DailyClock/">Daily Clock</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/spooky.png" alt="Trivia Game">
 
-        <h3>Trivia Game</h3>
+        <h3><a href="https://josephledbetter.github.io/TriviaGame/"> Trivia Game</a></h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
+     
     </section>
 
   </div>
