updated portfolio with the new projects crystal game, and project2

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,16 @@
 
         <h3><a href="https://josephledbetter.github.io/TriviaGame/"> Trivia Game</a></h3>
       </div>
+      <div class="work">
+        <img src="assets/images/crystal.png" alt="Crystal Game">
+
+        <h3><a href="https://josephledbetter.github.io/CrystalGame/"> Crystal Game</a></h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/project2.png" alt="Foodify App Game">
+
+        <h3><a href="https://josephledbetter.github.io/Project2/"> Foodify</a></h3>
+      </div>
      
     </section>
 
