updated with puppy application into portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,12 @@
 
         <h3><a href="https://josephledbetter.github.io/Project2/"> Foodify</a></h3>
       </div>
+      <div class="work">
+        <img src="assets/images/puppylove.png" alt="Puppy Love App Game">
+
+        <h3><a href=" https://github.com/JosephLedbetter/clickygame"> Puppy Love</a></h3>
+      </div>
+     
      
     </section>
 
